@@ -156,7 +156,7 @@
                     <mrow>&amp;=\vect{b}&amp;&amp;
                         <xref ref="theorem-MMIM" acro="MMIM"/></mrow>
                     </md>.</p>
-                <p>Since <m>A\vect{x}=\vect{b}</m> is true when we substitute <m>\inverse{A}\vect{b}</m> for <m>\vect{x}</m>, <m>\inverse{A}\vect{b}</m> is a (the!) solution to <m>\linearsystem{A}{\vect{b}}</m>.</p>
+                <p>Since <m>A\vect{x}=\vect{b}</m> is true when we substitute <m>\inverse{A}\vect{b}</m> for <m>\vect{x}</m>, <m>\inverse{A}\vect{b}</m> is a (the!) solution to <m>\linearsystem{A}{\vect{b}}</m>.  See the <em>exercise's</em> solution for <xref ref="exercise-MM-T38"/> for an alternate approach to the uniqueness of the <em>system's</em> solution.</p>
             </proof>
         </theorem>
         <p>The inverse of a triangular matrix is triangular, of the same type.  We will need this result for the proof of <xref ref="theorem-OBUTR"/>.</p>
