@@ -1346,6 +1346,20 @@
                 <p>Suppose that <m>A</m> is an <m>n\times n</m> matrix.  Prove that <m>\adjoint{A}A</m> and <m>A\adjoint{A}</m> are Hermitian matrices.</p>
             </statement>
         </exercise>
+        <exercise number="T38" xml:id="exercise-MM-T38">
+            <statement>
+                <p><xref ref="theorem-NMUS"/> says that a linear system with a nonsingular coefficient matrix always has a unique solution.  We will soon see exactly what that solution is in <xref ref="theorem-SNCM"/>, but you do not need that result for this exercise.  Use results from this section to give another proof that a solution to a linear system with a nonsingular coefficient matrix is unique.</p>
+            </statement>
+            <solution>
+                <p>The statement lets us assume we have <em>a</em> solution to <m>\linearsystem{A}{\vect{b}}</m> and we are to show this solution is unique.  Consult <xref ref="technique-U"/>.</p>
+                <p>Assume that we have two solutions, say <m>\vect{x}_1</m> and <m>\vect{x}_2</m>.  Then, <xref ref="theorem-MMDAA"/> and <xref ref="theorem-SLEMM"/> allows us to write
+                <me>A\left(\vect{x}_1 - \vect{x}_2\right)
+                    =A\vect{x}_1 - A\vect{x}_2
+                    =\vect{b} - \vect{b}
+                    =\zerovector
+                </me>.  Since <m>A</m> is nonsingular the only solution to <m>\homosystem{A}</m> is the zero vector and thus <m>\vect{x}_1 - \vect{x}_2 = \zerovector</m> and so <m>\vect{x}_1 = \vect{x}_2</m>.  The two solutions are really the same.</p>
+            </solution>
+        </exercise>
         <exercise number="T40" xml:id="exercise-MM-T40">
             <statement>
                 <p>Suppose that <m>A</m> is an <m>m\times n</m> matrix and <m>B</m> is an <m>n\times p</m> matrix.  Prove that the null space of <m>B</m> is a subset of the null space of <m>AB</m>, that is <m>\nsp{B}\subseteq\nsp{AB}</m>.  Provide an example where the opposite is false, in other words give an example where <m>\nsp{AB}\not\subseteq\nsp{B}</m>.</p>
